test/algeff/wrong/ops2.kk.out
test/algeff/wrong/ops2.kk(47, 5): error: constructor has too many arguments
 context : set
 term : set
 inferred type: (i : int) -> .op-set